--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <div class="box">
+        <h2>1.This is first question?</h2>
+        <div class="row">
+          <input class="options" id="option1" type="radio" value="a" name="option" />
+          <label for="option1"> option 1</label>
+        </div>
+        <div class="row">
+          <input class="options" id="option2" type="radio" value="b" name="option" />
+          <label for="option2"> option 2</label>
+        </div>
+        <div class="row">
+          <input class="options" id="option3" type="radio" value="c" name="option" />
+          <label for="option3"> option 3</label>
+        </div>
+
+        <div class="row">
+          <input class="options" id="option4" type="radio" value="d" name="option" />
+          <label for="option4"> option 4</label>
+        </div>
+        <button id="btn">submit</button>
+      </div>
+    </div>
+    <script src="./App.js"></script>
+  </body>
 </html>
